--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
           </div>
         </div>
         <div class="nosImg">
-          <img src="./assets/imgs/nosotros.png" alt="nosotros">
+          <img src="./assets/imgs/" alt="nosotros">
         </div>
       </div>
     </div>   
